--- a/src/components/Topbar/Topbar.css
+++ b/src/components/Topbar/Topbar.css
@@ -6,7 +6,7 @@ body {
 /* Estilos para la barra superior (topbar) */
 .topbar {
     position: relative;
-    background-color: #D1D1D1;
+    background-color: #262836;
     /* Color de fondo del topbar */
     padding: 10px 20px;
     /* Padding general del topbar */
